not use global event variable

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css?family=DM+Sans"
       rel="stylesheet"
     />
-    <script src="./script/modal.js" type="module" async></script>
+    <script src="./modal.js" async></script>
   </head>
   <body>
     <div class="confirmation-bground">
