[master] change tournament condition

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <input type="number" class="text-control" id="quantity" />
               </div>
               <span id="quantity-error" class="error-message"
-                >Avez-vous vraiment participé à autant de tournois ?.</span
+                >Votre réponse est incorrecte.</span
               >
               <p class="text-label">
                 A quel tournoi souhaitez-vous participer cette année ?
